...
        FocusManager.instance.primaryFocus?.unfocus();
      },
      child: Scaffold(
        key: scaffoldKey,
        backgroundColor: FlutterFlowTheme.of(context).primaryBackground,
        body: Container(
          key: const ValueKey('Container_svdu'),
          width: double.infinity,
          height: double.infinity,
          decoration: BoxDecoration(
            image: DecorationImage(
              fit: BoxFit.cover,
              image: Image.asset(
...
                          borderRadius: 8.0,
                          elevation: 0.0,
                          buttonMargin: const EdgeInsetsDirectional.fromSTEB(
                              8.0, 0.0, 8.0, 0.0),
                          tabs: const [
                            Tab(
                              key: ValueKey('ShoppingListTab_dta3'),
                              text: 'Shopping List',
                            ),
                            Tab(
                              key: ValueKey('PantryListTab_686m'),
                              text: 'PantryList',
                            ),
                          ],
                          controller: _model.tabBarController,
                          onTap: (i) async {
                            [() async {}, () async {}][i]();
...
                                                border: Border.all(
                                                  color: Colors.white,
                                                  width: 3.0,
                                                ),
                                              ),
                                              child: Row(
                                                key: const ValueKey('Row_pdoy'),
                                                mainAxisSize: MainAxisSize.max,
                                                children: [
                                                  Padding(
                                                    padding:
                                                        const EdgeInsetsDirectional
                                                            .fromSTEB(12.0, 0.0,
...
                                                        crossAxisAlignment:
                                                            CrossAxisAlignment
                                                                .end,
                                                        children: [
                                                          FlutterFlowIconButton(
                                                            key: const ValueKey(
                                                                'move_h116'),
                                                            borderColor: Colors
                                                                .transparent,
                                                            borderRadius: 8.0,
                                                            buttonSize: 40.0,
                                                            icon: Icon(
                                                              Icons.swap_horiz,
...
                                                                ),
                                                              });
                                                            },
                                                          ),
                                                          FlutterFlowIconButton(
                                                            key: const ValueKey(
                                                                'Delete_pn2m'),
                                                            borderColor: Colors
                                                                .transparent,
                                                            borderRadius: 8.0,
                                                            buttonSize: 40.0,
                                                            icon: Icon(
                                                              Icons
...
                                                          context)
                                                      .orange,
                                                  width: 3.0,
                                                ),
                                              ),
                                              child: Row(
                                                key: const ValueKey('Row_pywu'),
                                                mainAxisSize: MainAxisSize.max,
                                                children: [
                                                  Padding(
                                                    padding:
                                                        const EdgeInsetsDirectional
                                                            .fromSTEB(12.0, 0.0,
...
                                                        crossAxisAlignment:
                                                            CrossAxisAlignment
                                                                .end,
                                                        children: [
                                                          FlutterFlowIconButton(
                                                            key: const ValueKey(
                                                                'move_gu3l'),
                                                            borderColor: Colors
                                                                .transparent,
                                                            borderRadius: 8.0,
                                                            buttonSize: 40.0,
                                                            icon: Icon(
                                                              Icons
...
                Align(
                  alignment: const AlignmentDirectional(1.0, 1.0),
                  child: Padding(
                    padding:
                        const EdgeInsetsDirectional.fromSTEB(0.0, 0.0, 0.0, 12.0),
                    child: FlutterFlowIconButton(
                      key: const ValueKey('IconButton_1j17'),
                      borderColor: FlutterFlowTheme.of(context).darkGreen,
                      borderRadius: 24.0,
                      borderWidth: 3.0,
                      buttonSize: 50.0,
                      fillColor: FlutterFlowTheme.of(context).lightGreen,
                      icon: Icon(
...
