...
                                        mainAxisSize: MainAxisSize.max,
                                        children: [
                                          Expanded(
                                            child: SizedBox(
                                              width: 200.0,
                                              child: TextFormField(
                                                key: const ValueKey('searchBar_0qom'),
                                                controller: _model
                                                    .searchBarTextController,
                                                focusNode:
                                                    _model.searchBarFocusNode,
                                                autofocus: false,
                                                obscureText: false,
...
                                                    .searchBarTextControllerValidator
                                                    .asValidator(context),
                                              ),
                                            ),
                                          ),
                                          FFButtonWidget(
                                            key: const ValueKey('Search_6q6c'),
                                            onPressed: () async {
                                              logFirebaseEvent(
                                                  'USER_RECIPIES_PAGE_Search_ON_TAP');
                                              logFirebaseEvent(
                                                  'Search_backend_call');
                                              _model.apiResult5q7 =
...
                                              elevation: 0.0,
                                              borderRadius:
                                                  BorderRadius.circular(8.0),
                                            ),
                                          ),
                                          FFButtonWidget(
                                            key: const ValueKey('filters_ixlf'),
                                            onPressed: () async {
                                              logFirebaseEvent(
                                                  'USER_RECIPIES_PAGE_filters_ON_TAP');
                                              logFirebaseEvent(
                                                  'filters_navigate_to');

...
                                                          .toList() ??
                                                      [])
                                                  .take(3)
                                                  .toList();

                                              return ListView.separated(
                                                key: const ValueKey('ListView_de6d'),
                                                padding: const EdgeInsets.symmetric(
                                                    vertical: 10.0),
                                                shrinkWrap: true,
                                                scrollDirection: Axis.vertical,
                                                itemCount: result.length,
                                                separatorBuilder: (_, __) =>
...
                                                              BorderRadius
                                                                  .circular(
                                                                      0.0),
                                                        ),
                                                        child: Column(
                                                          key: const ValueKey(
                                                              'Column_5zkw'),
                                                          mainAxisSize:
                                                              MainAxisSize.max,
                                                          mainAxisAlignment:
                                                              MainAxisAlignment
                                                                  .center,
                                                          children: [
...
