...
                                ),
                      ),
                    ),
                    SizedBox(
                      width: double.infinity,
                      child: TextFormField(
                        key: const ValueKey('LoginEmailTxt_1sc0'),
                        controller: _model.loginEmailTxtTextController,
                        focusNode: _model.loginEmailTxtFocusNode,
                        autofocus: false,
                        textInputAction: TextInputAction.next,
                        obscureText: false,
                        decoration: InputDecoration(
...
                            .asValidator(context),
                      ),
                    ),
                    SizedBox(
                      width: double.infinity,
                      child: TextFormField(
                        key: const ValueKey('LoginPassTxt_sxlq'),
                        controller: _model.loginPassTxtTextController,
                        focusNode: _model.loginPassTxtFocusNode,
                        autofocus: false,
                        textInputAction: TextInputAction.next,
                        obscureText: !_model.loginPassTxtVisibility,
                        decoration: InputDecoration(
...
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: [
                      Padding(
                        padding:
                            const EdgeInsetsDirectional.fromSTEB(0.0, 24.0, 0.0, 0.0),
                        child: FFButtonWidget(
                          key: const ValueKey('LoginBtn_kww7'),
                          onPressed: () async {
                            logFirebaseEvent('LOGIN_PAGE_LoginBtn_ON_TAP');
                            logFirebaseEvent('LoginBtn_auth');
                            GoRouter.of(context).prepareAuthEvent();

                            final user = await authManager.signInWithEmail(
...
