...
                        ),
                      ),
                    ),
                    SizedBox(
                      width: double.infinity,
                      child: TextFormField(
                        key: const ValueKey('FeedbackTxt_odqd'),
                        controller: _model.feedbackTxtTextController,
                        focusNode: _model.feedbackTxtFocusNode,
                        autofocus: false,
                        textInputAction: TextInputAction.next,
                        obscureText: false,
                        decoration: InputDecoration(
...
                Expanded(
                  child: Column(
                    mainAxisSize: MainAxisSize.max,
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: [
                      FFButtonWidget(
                        key: const ValueKey('SubmitBtn_ipv1'),
                        onPressed: () async {
                          logFirebaseEvent('SURVEY_PAGE_SubmitBtn_ON_TAP');
                          logFirebaseEvent('SubmitBtn_google_analytics_event');
                          logFirebaseEvent(valueOrDefault<String>(
                            _model.ratingBarValue?.toString(),
                            '0',
...
